# Sales-Data-Analysis

./: DataAnalysis.ipynb  README.md  pyproject.toml  requirements.txt  sales_data.csv
Colab/: DataAnalysis.ipynb
